@@ -14,6 +14,7 @@ If new import has new featured image it does not set it properly as featured ima
 Beaver Builder plugin has problems with draft posts when GD installed - FIXED
 Second line menus items can show over first line sub menu items becase of z-index - FIXED
 Changed load_textdomain to init hook for WPML compatibility - CHANGED
+Text `Listing Title` and `Listing Description` changed to CPT specific - CHANGED
 
 v1.6.2
 GD Search widget bug with Display Widgets plugin - FIXED
